--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button {
   width: 380px;
   height: 125px;
   margin-top: -100px;
-  background-image: url('image/brush.png');
+  background-image: url('image/brush.webp');
   background-position: 50%;
   background-size: contain;
   background-repeat: no-repeat;
