--- a/style.css
+++ b/style.css
@@ -1,11 +1,49 @@
-html,
-body {
+#header .logo,
+#preloader {
+  font-size: 16px;
+  user-select: none;
+  color: #555;
+}
+#header .logo,
+#promo .promo__price .price__amount,
+#promo .promo__title {
+  font-family: 'Rubik Mono One', sans-serif;
+  font-weight: 400;
+}
+#about,
+#promo {
+  position: relative;
+}
+#photo .photo__content ul,
+#photo .photo__list {
+  padding: 0;
+  list-style: none;
+}
+#delivery,
+#outreach {
+  margin-top: 50px;
+  padding-bottom: 100px;
+}
+#modal,
+#preloader {
+  position: fixed;
+  left: 0;
+  height: 100%;
+}
+body,
+html {
   height: 100%;
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
   cursor: url('cursor/default.png'), default;
+}
+#modal .modal__content .modal__choice .choice__item *,
+#modal .modal__content .modal__contact .contact__social h4,
+a,
+button {
+  cursor: url('cursor/pointer.png'), default;
 }
 section {
   display: flex;
@@ -16,29 +54,26 @@ section {
 a,
 button {
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 700;
   color: #a7532b;
-  cursor: url('cursor/pointer.png'), default;
 }
 #preloader {
-  position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: monospace;
-  font-weight: bold;
-  font-size: 16px;
+  font-weight: 700;
   background-color: #fff;
-  color: #555;
-  user-select: none;
-  transition: opacity 1s ease, visibility 1s ease;
+  transition: opacity 1s, visibility 1s;
   visibility: visible;
   opacity: 1;
   z-index: 99;
+}
+#modal,
+#modal .modal__content .modal__choice .choice__item input[type='radio'] {
+  display: none;
 }
 .preloader__hide {
   visibility: hidden !important;
@@ -52,13 +87,6 @@ button {
   justify-content: space-between;
   align-items: center;
 }
-#header .logo {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: #555;
-  user-select: none;
-}
 #header .nav {
   font-size: 14px;
 }
@@ -69,13 +97,8 @@ button {
   display: flex;
   flex-direction: column;
 }
-#promo {
-  position: relative;
-}
 #promo .promo__title {
   margin-bottom: -35px;
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
   font-size: 60px;
   text-align: center;
 }
@@ -94,7 +117,7 @@ button {
   background-position: 50%;
   background-size: contain;
   background-repeat: no-repeat;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
 }
 #promo .promo__price {
@@ -102,8 +125,6 @@ button {
   align-items: flex-start;
 }
 #promo .promo__price .price__amount {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
   font-size: 40px;
 }
 #promo .promo__price .price__currency {
@@ -114,19 +135,29 @@ button {
 #promo .promo__advice {
   margin-top: 8px;
   font-size: 13px;
-  font-weight: bold;
+  font-weight: 700;
   color: #555;
 }
+#delivery .delivery__air,
 #promo .promo__air {
   position: absolute;
   top: 50%;
   left: 50%;
-  font-family: 'Caveat', cursive;
+  font-family: Caveat, cursive;
 }
 #promo .promo__air p {
   width: 150px;
   font-size: 24px;
   transform: rotate(-25deg) translate(0, -50px);
+}
+#about .about__content h3,
+#photo .photo__content h3,
+#question .question__list .question__item dt {
+  font-family: 'Rubik Mono One', sans-serif;
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  color: #555;
 }
 #promo .air__left {
   transform: translate(-400px, 50px);
@@ -143,10 +174,13 @@ button {
   transform: rotate(25deg) translate(0, -30px);
 }
 #about {
-  position: relative;
   margin-top: 50px;
 }
-#about .about__title {
+#about .about__title,
+#delivery .delivery__title,
+#outreach .outreach__title,
+#photo .photo__title,
+#question .question__title {
   font-family: 'Rubik Mono One', sans-serif;
   font-weight: 400;
   font-size: 40px;
@@ -161,17 +195,11 @@ button {
   margin-right: 15px;
   z-index: 2;
 }
-#about .about__content h3 {
-  margin-bottom: 10px;
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  color: #555;
-}
-#about .about__content p {
-  margin-top: 0;
-  font-family: 'Caveat', cursive;
+#about .about__content p,
+#photo .photo__content ul {
+  font-family: Caveat, cursive;
   font-size: 24px;
+  margin-top: 0;
 }
 #about .about__img {
   width: 330px;
@@ -195,24 +223,18 @@ button {
   height: 130px;
   transform: translate(420px, 80px);
 }
-#photo {
+#photo,
+#question {
   margin-top: 50px;
 }
-#photo .photo__title {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-  color: #aaa;
-}
-#photo .photo__box {
+#photo .photo__box,
+.wrap {
   display: flex;
 }
 #photo .photo__list {
   position: relative;
-  padding: 0;
   width: 170px;
   height: 400px;
-  list-style: none;
   overflow: hidden;
 }
 #photo .photo__list img {
@@ -234,29 +256,6 @@ button {
 #photo .photo__frame img {
   width: 550px;
 }
-#photo .photo__content h3 {
-  margin-bottom: 10px;
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  color: #555;
-}
-#photo .photo__content ul {
-  margin-top: 0;
-  padding: 0;
-  font-family: 'Caveat', cursive;
-  font-size: 24px;
-  list-style: none;
-}
-#question {
-  margin-top: 50px;
-}
-#question .question__title {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-  color: #aaa;
-}
 #question .question__list {
   display: flex;
   flex-wrap: wrap;
@@ -272,18 +271,13 @@ button {
 }
 #question .question__list .question__item dt {
   position: relative;
-  margin-bottom: 10px;
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  color: #555;
   z-index: 2;
 }
 #question .question__list .question__item dd {
   position: relative;
   margin-top: 0;
   padding: 0;
-  font-family: 'Caveat', cursive;
+  font-family: Caveat, cursive;
   font-size: 24px;
   list-style: none;
   z-index: 2;
@@ -297,14 +291,6 @@ button {
 }
 #delivery {
   position: relative;
-  margin-top: 50px;
-  padding-bottom: 100px;
-}
-#delivery .delivery__title {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-  color: #aaa;
 }
 #delivery .delivery__box {
   display: flex;
@@ -314,7 +300,7 @@ button {
 }
 #delivery .delivery__option {
   max-width: 380px;
-  font-family: 'Caveat', cursive;
+  font-family: Caveat, cursive;
   font-size: 24px;
 }
 #delivery .delivery__option h3 {
@@ -324,9 +310,7 @@ button {
   font-size: 18px;
   color: #555;
 }
-#delivery .delivery__option .delivery__img {
-  height: 40px;
-}
+#delivery .delivery__option .delivery__img,
 #delivery .delivery__option .delivery__img img {
   height: 40px;
 }
@@ -340,12 +324,6 @@ button {
 #delivery .delivery__option .advice h6 {
   margin: 0 5px;
   font-size: 18px;
-}
-#delivery .delivery__air {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-family: 'Caveat', cursive;
 }
 #delivery .delivery__air p {
   width: 150px;
@@ -370,16 +348,6 @@ button {
 #delivery .air__right p {
   transform: rotate(25deg) translate(110px, -275px);
 }
-#outreach {
-  margin-top: 50px;
-  padding-bottom: 100px;
-}
-#outreach .outreach__title {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-  color: #aaa;
-}
 #outreach .outreach__list {
   display: flex;
   justify-content: center;
@@ -399,14 +367,10 @@ button {
   text-align: center;
 }
 #modal {
-  position: fixed;
-  left: 0;
   top: 0;
-  display: none;
   width: 100%;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
-  transition: opacity 1s ease;
+  transition: opacity 1s;
   z-index: 3;
 }
 #modal .modal__content {
@@ -447,9 +411,6 @@ button {
   align-items: center;
   margin-bottom: 5px;
 }
-#modal .modal__content .modal__choice .choice__item input[type='radio'] {
-  display: none;
-}
 #modal
   .modal__content
   .modal__choice
@@ -478,7 +439,17 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
-  transition: 300ms transform ease-in-out;
+  transition: transform 0.3s ease-in-out;
+}
+#modal .modal__content .modal__contact .contact__form input[type='submit'],
+.button__buy {
+  padding: 12px 20px;
+  background: #a7532b;
+  font-family: 'Rubik Mono One', cursive;
+  font-weight: 400;
+  outline: 0;
+  border: 0;
+  color: #fff;
 }
 #modal .modal__content .modal__choice .choice__item label {
   display: flex;
@@ -486,9 +457,6 @@ button {
   flex-wrap: wrap;
   font-size: 18px;
   color: #555;
-}
-#modal .modal__content .modal__choice .choice__item * {
-  cursor: url('cursor/pointer.png'), default;
 }
 #modal .modal__content .modal__contact {
   display: flex;
@@ -502,20 +470,11 @@ button {
 }
 #modal .modal__content .modal__contact .contact__form input {
   margin-top: 5px;
-  padding: 12px 12px;
+  padding: 12px;
   font-size: 16px;
   border: 5px solid #c3c3c3;
   outline: 0;
   cursor: url('cursor/pointer.png'), default;
-}
-#modal .modal__content .modal__contact .contact__form input[type='submit'] {
-  padding: 12px 20px;
-  background: #a7532b;
-  font-family: 'Rubik Mono One', cursive;
-  font-weight: 400;
-  color: #fff;
-  outline: 0;
-  border: 0;
 }
 #modal .modal__content .modal__contact .contact__or {
   margin: 15px 0;
@@ -528,20 +487,9 @@ button {
 #modal .modal__content .modal__contact .contact__social h4 {
   margin: 0;
   color: #a7532b;
-  cursor: url('cursor/pointer.png'), default;
-}
-.wrap {
-  display: flex;
 }
 .button__buy {
   width: 150px;
-  padding: 12px 20px;
-  background: #a7532b;
-  font-family: 'Rubik Mono One', cursive;
-  font-weight: 400;
-  color: #fff;
-  outline: 0;
-  border: 0;
 }
 img {
   -webkit-user-select: none;
@@ -555,25 +503,17 @@ img {
   color: #fff;
 }
 @media (max-width: 862px) {
-  #header .logo {
-    display: none;
-  }
-  #header .nav {
+  #about .about__air,
+  #delivery .delivery__air,
+  #header .logo,
+  #header .nav,
+  #promo .promo__air {
     display: none;
   }
   #promo .promo__title {
     font-size: 42px;
   }
-  #promo .promo__air {
-    display: none;
-  }
-  #about .about__box {
-    flex-direction: column;
-    align-items: center;
-  }
-  #about .about__air {
-    display: none;
-  }
+  #about .about__box,
   #photo .wrap {
     flex-direction: column;
     align-items: center;
@@ -588,9 +528,6 @@ img {
     align-items: center;
     width: auto;
     padding: 10px;
-  }
-  #delivery .delivery__air {
-    display: none;
   }
   #outreach .outreach__list {
     justify-content: flex-start;
