--- a/style.css
+++ b/style.css
@@ -231,31 +231,111 @@ button {
 .wrap {
   display: flex;
 }
+
 #photo .photo__list {
   position: relative;
   width: 170px;
   height: 400px;
+  cursor: url('cursor/pointer.png'), default;
   overflow: hidden;
+  overflow-y: scroll;
 }
 #photo .photo__list img {
   width: 170px;
 }
-#photo .photo__list::after {
+
+#photo .photo__list .photo__item.active {
+  opacity: 1 !important;
+}
+#photo .photo__list .photo__item {
+  position: relative;
+  opacity: 0.5;
+}
+#photo .photo__list .photo__item::after {
   content: '';
   position: absolute;
-  bottom: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
-  height: 100px;
-  background-image: linear-gradient(to top, #fff, transparent);
+  height: 100%;
+  background: url(gallery/zoom_in.png) center no-repeat;
+}
+#photo .photo__list .photo__item.active::after {
+  display: none;
+}
+#photo .photo__list .photo__item:hover {
+  opacity: 0.8;
 }
 #photo .photo__frame {
+  position: relative;
   width: 533px;
   margin: 0 30px;
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 #photo .photo__frame img {
   width: 550px;
+  animation: fadeIn 0.5s ease-in-out;
 }
+#photo .photo__frame img.active {
+  opacity: 1;
+}
+
+#photo .photo__list .active {
+}
+
+#photo .photo__wrap {
+  position: relative;
+}
+
+#photo .photo__wrap .photo__control {
+  width: 100%;
+}
+.photo__arrow-back,
+.photo__arrow-next {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 15px;
+
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 15px;
+  border: none;
+  width: 50px;
+  height: 50px;
+  cursor: url('cursor/pointer.png'), default;
+  outline: none;
+}
+
+.photo__arrow-back {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: rotateY(-50%);
+  background: url(gallery/arrow_back_60px.png) center no-repeat;
+}
+.photo__arrow-next {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: rotateY(-50%);
+  background: url(gallery/arrow_forward_60px.png) center no-repeat;
+}
+
+.photo__arrow-back:active,
+.photo__arrow-next:active {
+  opacity: 0.5;
+}
+
 #question .question__list {
   display: flex;
   flex-wrap: wrap;
@@ -546,5 +626,23 @@ img {
   }
   #modal .modal__content .modal__choice {
     margin-right: 0;
+  }
+}
+
+@media (max-width: 570px) {
+  .photo__arrow-back {
+    left: 10%;
+  }
+  .photo__arrow-next {
+    right: 10%;
+  }
+}
+
+@media (max-width: 570px) {
+  .photo__arrow-back {
+    left: 15%;
+  }
+  .photo__arrow-next {
+    right: 15%;
   }
 }
